# rust_test

./: .env.example  .gitignore  Cargo.toml  PHASE_4_COMPLETION.md  README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: enhancement-configuration.md  enhancement-error-handling.md  enhancement-ui-responsive.md
benches/: simple_bench.rs
crates/app_cli/: Cargo.toml
crates/app_cli/src/: lib.rs  main.rs
crates/app_cli/src/modes/: menu.rs  openai_chat.rs  rpg_game.rs
crates/app_cli/src/ui/: rpg_ui.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: lib.rs
crates/app_core/src/openai/: worker.rs
crates/app_core/src/openai/call/: multi_step.rs
crates/app_core/src/openai/tools/: read_docs.rs
crates/app_core/src/rpg/: game.rs  mod.rs
crates/app_core/src/services/: chat_service.rs  rpg_service.rs
crates/app_web/: Cargo.toml
crates/app_web/src/: main.rs
crates/app_web/src/handlers/: chat.rs  mod.rs  pages.rs  rpg.rs
crates/app_web/src/models/: mod.rs
crates/app_web/templates/: chat.html  home.html  rpg.html
crates/rust_test_cli/: Cargo.toml
crates/rust_test_cli/src/: lib.rs  main.rs
crates/rust_test_cli/src/ui/: mod.rs
crates/rust_test_core/: Cargo.toml
crates/rust_test_core/src/: lib.rs
crates/rust_test_core/src/openai/: simple.rs
crates/rust_test_core/src/openai/call/: types.rs
crates/rust_test_core/src/openai/tools/: mod.rs  rpg.rs
crates/rust_test_core/src/rpg/: rules.rs
crates/rust_test_core/src/services/: chat_service.rs  mod.rs
crates/rust_test_core/src/sqlite/: mod.rs
docs/: benches.md  examples.md  exec.md  improvement-analysis.md  openai_web_tool_implementation.md  phase1.1_completion_report.md  ratatui.md  test.md
examples/: closure.rs  memopad.rs  rpg_ai.rs  rpg_manual.rs
feature/: openai_history_refactor.md  openai_web_tool.md  refactor.md  web_feature.md
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  ui.rs
src/coffee_game/: implementations.md  requirements.md
src/modes/: menu.rs  mod.rs  openai_chat.rs  rpg_game.rs
src/openai/: call_tool.rs  docs_tool.rs  history.rs  mod.rs  simple.rs  tavily.rs  tool.rs  worker.rs
src/openai/call/: mod.rs  multi_step.rs  proposer.rs  request.rs  resolver.rs
src/openai/tools/: constants.rs  core.rs  docs.rs  mod.rs  number_guess.rs  sample_tools.rs  tavily.rs
src/rpg/: game.rs  models.rs  ui.rs
src/sqlite/: mod.rs
tests/: app_tests.rs  common.rs  config_tests.rs  multi_step_live_test.rs  multi_step_read_docs_live_test.rs  openai_simple_live_tests.rs  openai_tool_live_tests.rs  phase_1_2_tests.rs  resolve_and_execute_tool_call_test.rs  sqlite_util_tests.rs
