[package]
name = "rust_test"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
async-openai = "0.29"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"

[dev-dependencies]
ctor = "0.2"
criterion = "0.4"

[[bench]]
name = "simple_bench"
path = "benches/simple_bench.rs"
harness = false
