[workspace]
members = [
    "crates/app_core",
    "crates/app_cli",
    "crates/app_web",
]
resolver = "2"

[workspace.dependencies]
# 共通依存関係
async-openai = "0.29"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
rand = "0.8"
lazy_static = "1.5"
color-eyre = "0.6.3"

# TUI専用
crossterm = "0.28.1"
ratatui = "0.29.0"

# 開発用
ctor = "0.2"
criterion = "0.4"
tempfile = "3.10"
once_cell = "1.19"
