[package]
name = "app_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_test"
path = "src/main.rs"

[dependencies]
# コアクレート
app_core = { path = "../app_core" }

# TUI関連
ratatui = { workspace = true }
crossterm = { workspace = true }

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# エラーハンドリング
color-eyre = { workspace = true }

# 環境変数
dotenvy = { workspace = true }

# 非同期ランタイム
tokio = { workspace = true }

# その他
serde = { workspace = true }
serde_json = { workspace = true }
ctor.workspace = true

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "simple_bench"
path = "../../benches/simple_bench.rs"
harness = false
