[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenAI関連
async-openai = { workspace = true }
tokio = { workspace = true }

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# ログ
tracing = { workspace = true }

# HTTP
reqwest = { workspace = true }

# データベース
rusqlite = { workspace = true }

# ユーティリティ
rand = { workspace = true }
lazy_static = { workspace = true }
dotenvy = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
