[package]
name = "app_web"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../app_core" }

# Webフレームワーク
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }

# セッション管理
tower = "0.4"
tower-sessions = "0.12"

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

# テンプレートエンジン
askama = "0.12"
askama_axum = "0.4"

# ロギング
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 環境変数
dotenvy = { workspace = true }

# エラーハンドリング
color-eyre = { workspace = true }
